# auto_game

./: GSD-工程分析报告-中文.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  escaped-prompt.txt  temp-planner-prompt.md
.planning/analysis/: AGENT-ANALYSIS.md
.planning/phases/01-environment-camera-setup/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-basic-insect-implementation/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-05-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-UI-SPEC.md
.planning/phases/03-simulation-behaviors/: 03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/04-ui-enhanced-camera/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-05-PLAN.md  04-06-PLAN.md  04-07-PLAN.md  04-08-PLAN.md  04-UI-SPEC.md  checker_prompt.md  revision_prompt.md  revision_prompt_short.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  NATURAL_ENVIRONMENT.md  OBSERVATION_GAMEPLAY.md  PITFALLS.md  STACK.md  SUMMARY.md
game_tech/: game-sync-technology-deep-dive.md  shadow-following-algorithm-analysis.md
game_tech/.claude/: settings.local.json
game_tech/shadow_following/: Cargo.toml
game_tech/shadow_following/examples/: demo.rs  simple.rs
game_tech/shadow_following/src/: client.rs  lib.rs  network.rs  server.rs  simulation.rs  state.rs
pixel_agent/.claude/: settings.local.json
